position left-aligned image correctly

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -17,6 +17,10 @@ body
   h3
     font-size: 20px
 
+  .wysiwyg-float-left
+    float: left
+    margin-right: 20px
+
   header
 
     height: 85px
